// SPDX-FileCopyrightText: Copyright (c) 2025 Cisco and/or its affiliates.
// SPDX-License-Identifier: Apache-2.0

syntax = "proto3";

package store.v1alpha1;

import "google/protobuf/empty.proto";
import "store/v1alpha1/object.proto";

// Defines an interface for content-addressable storage
// service for arbitrary data such as blobs, files, etc.
service StoreService {
  // Push performs streamed write operation for provided object.
  rpc Push(stream Object) returns (ObjectRef);
  // Pull performs streamed read operation for the requested object.
  rpc Pull(ObjectRef) returns (stream Object);
  // Lookup resolves ref data from digest only.
  rpc Lookup(ObjectRef) returns (ObjectRef);
  // Remove performs delete operation for the requested object.
  rpc Delete(ObjectRef) returns (google.protobuf.Empty);
}
